RESOLVED FIXED160390
REGRESSION (r196383): Drop down CSS menus not working on cnet.com, apmex.com
https://bugs.webkit.org/show_bug.cgi?id=160390
Summary REGRESSION (r196383): Drop down CSS menus not working on cnet.com, apmex.com
Antti Koivisto
Reported 2016-07-31 13:06:42 PDT
Certain kinds of dynamically enabled :hover rules that affect descendants don't work.
Attachments
patch (8.20 KB, patch)
2016-07-31 13:53 PDT, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from ews121 for ios-simulator-wk2 (649.24 KB, application/zip)
2016-07-31 14:50 PDT, Build Bot
no flags
patch (8.82 KB, patch)
2016-08-01 00:08 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2016-07-31 13:07:41 PDT
Antti Koivisto
Comment 2 2016-07-31 13:53:27 PDT
Build Bot
Comment 3 2016-07-31 14:50:49 PDT
Comment on attachment 284969 [details] patch Attachment 284969 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1787244 New failing tests: fast/selectors/hover-invalidation-descendant-dynamic.html
Build Bot
Comment 4 2016-07-31 14:50:53 PDT
Created attachment 284970 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Simon Fraser (smfr)
Comment 5 2016-07-31 16:29:29 PDT
No hover on iOS so you'll have to skip the test there, or you can do a more complex UIScriptController test.
Antti Koivisto
Comment 6 2016-08-01 00:08:05 PDT
WebKit Commit Bot
Comment 7 2016-08-01 11:02:06 PDT
Comment on attachment 284988 [details] patch Clearing flags on attachment: 284988 Committed r203976: <http://trac.webkit.org/changeset/203976>
WebKit Commit Bot
Comment 8 2016-08-01 11:02:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.